# strategy-bot

./: .gitignore  pyproject.toml
app/: main.py
app/strategies/: __init__.py  bond_sell.py
notebooks/: Strategy.ipynb
